2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/releasing.txt:
	* po/README.translators:
	  Updated.

	* lib/gaupol/test/__init__.py:
	  Changed _SUBRIP_TEXT and _MICRODVD_TEXT.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/formats/ass.notes:
	* doc/formats/mdvddoc.html:
	* doc/formats/microdvd.notes:
	* doc/formats/mpl2.notes:
	* doc/formats/ssa.notes:
	* doc/formats/subrip.notes:
	* doc/formats/subviewer2.notes:
	  Renamed.

2006-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* doc/formats/COPYING:
	* doc/formats/README:
	* doc/formats/ass.sample:
	* doc/formats/ass.txt:
	* doc/formats/microdvd.html:
	* doc/formats/microdvd.sample:
	* doc/formats/microdvd.txt:
	* doc/formats/mpl2-eng.html:
	* doc/formats/mpl2.sample:
	* doc/formats/mpl2.txt:
	* doc/formats/ssa.sample:
	* doc/formats/ssa.txt:
	* doc/formats/subrip.sample:
	* doc/formats/subrip.txt:
	* doc/formats/subviewer2.sample:
	* doc/formats/subviewer2.txt:
	  Added samples. Reviewed notes.

	* lib/gaupol/gtk/delegate/guiinit.py:
	* lib/gaupol/gtk/dialog/find.py:
	  Minor fixes.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/test/test_find.py:
	  Replaced self._pos with self._match_span.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/text/test/test_finder.py:
	* lib/gaupol/gtk/delegate/test/test_filesave.py:
	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/spellcheck.py:
	* lib/gaupol/gtk/dialog/test/test_find.py:
	* lib/gaupol/gtk/util/test/test_conf.py:
	* tools/profile:
	  Fixed bugs.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialog/find.py:
	  Fixed bugs.

2006-06-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/find-dialog.glade:
	* data/glade/replace-dialog.glade:
	  Removed selected rows targets.

	* lib/gaupol/base/delegate/find.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/text/finder.py:
	* lib/gaupol/base/text/test/test_finder.py: