@@ -7,9 +7,8 @@ Legend:
 Plans for 0.5.0
 ===============
 
-  * Put a .pot file in the trunk?
-  * Mime-type registration?
   * Non-lib stuff
+  * Put a .pot file in the trunk? Yes!
   * setup.py:
       - Don't install any testing
       - python 2.5 uninstall?
@@ -20,9 +19,10 @@ Plans for 0.5.0
           - See alacarte source code
       - clean command
       - Do setup.py install options work?
+  * Mime-type registration?
 
   New:
-    [W] Find and replace
+    [D] Find and replace
     [D] Encoding autodetection: http://chardet.feedparser.org/
 
   Changes:
@@ -30,9 +30,9 @@ Plans for 0.5.0
     [D] Applied GNOME Goal 2.1: Install theme-friendly icons
     [D] Support default browsers on KDE and Mac OSX as well
     [D] Better video player defaults on Windows
-    [W] Framerate conversion available for time-based subs as well
+    [D] Framerate conversion available for time-based subs as well
     [D] Developer-specific options to gaupol made into separate scripts
-    [W] Testing framework made compatible with py.test
+    [D] Testing framework made compatible with py.test
     [D] Desktop file strings are now extracted to .po files
     [D] Time decimal changed from "," to "."
     [D] Video selection dialog's file filter should default to video
@@ -52,7 +52,7 @@ Plans for 0.5.0
     [D] Fixed spell-check recursion bugs
 
   Dependencies:
-    [W] Psyco no longer used
+    [D] Psyco no longer used
     [D] Universal Encoding Detector >= 1.0
 
   New Translations:
@@ -62,7 +62,7 @@ Plans for 0.5.0
 Plans after 0.5.0
 =================
 
-  * Correction overview dialog/wizard
+  * Correction wizard
 
   New Features:
     [ ] Common error correction
@@ -87,17 +87,25 @@ Unscheduled
 
   * Documentation (HTML)
 
-  * Built-in GStreamer preview?
-      - http://gstreamer.freedesktop.org/modules/gst-python.html
-      - http://pygstdocs.berlios.de/
-      - http://pitivi.sourceforge.net/
-
   * PyGTK 2.10
       - http://live.gnome.org/PyGTK/WhatsNew210
       - GNOME Goal #1: Move from popt to GOption
-          - http://live.gnome.org/GnomeGoals/PoptGOption
-          - http://bugzilla.gnome.org/show_bug.cgi?id=163645
-          - http://bugzilla.gnome.org/attachment.cgi?id=63515&action=view
+          o http://live.gnome.org/GnomeGoals/PoptGOption
+          o http://bugzilla.gnome.org/show_bug.cgi?id=163645
+          o http://bugzilla.gnome.org/attachment.cgi?id=63515&action=view
 
   * Python 2.5
       - http://www.python.org/download/releases/2.5/
+      - http://docs.python.org/dev/whatsnew/whatsnew25.html
+          o 1 PEP 308: Conditional Expressions
+          o 3 PEP 314: Metadata for Python Software Packages v1.1
+          o 6 PEP 341: Unified try/except/finally
+          o 7 PEP 342: New Generator Features
+          o 8 PEP 343: The 'with' statement
+          o 12 Other Language Changes
+
+
+  * Built-in GStreamer preview
+      - http://gstreamer.freedesktop.org/modules/gst-python.html
+      - http://pygstdocs.berlios.de/
+      - http://pitivi.sourceforge.net/
